 ! Minor change or bugfix. (don't bother to log typos except between releases.)
 * Change like above, but affects templates.
 & Change that affects a language file. (make two if it affects templates too.)
 + Feature addition or improvement.
 - Feature or option removal.
 % Development flag or note, such as branching.


Pretty URLs 0.8                                                    7 March, 2008
================================================================================
 ! Profiles: Fixed a minor typo.
 + wiki: Added the DatabaseChanges page.
 ! Topics: Use 301 redirections for topics with wrong board URLs. (Display.php)
 + Base: Romanise Modern Greek. (Subs-PrettyUrls.php)
 ! Boards: Don't be so eager to find board URLs, targetboard doesn't count! (PrettyUrls-Filters.php)
 ! Topics: Don't rewrite URLs for topics that don't exist. (PrettyUrls-Filters.php)
 % Display database changes on (un)installing. (install.php, uninstall.php)
 + Created a script to uninstall all database changes. (uninstall.php)
 ! Base: Finally fixed quotes. Sure hope I won't regret saying that. (QueryString.php, Subs-PrettyUrls.php)
 % All functions now begin with 'pretty'.
 ! Base: Process <form>s, but not <script>s. (QueryString.php)
 ! Base: Added a .htaccess fix for shared hosts.
 * Boards: Added an interface to edit a board's URL. (ManageBoards.template.php)
 % seo4smf: Added a package to 301 redirect SEO4SMF's URLs.
 ! Boards/Topics: Remove page numbers from URLs unless they're actually needed. (PrettyUrls-Filters.php)
 & Base: Include language entries for english-utf8 too.
 ! Base: Don't require the same file 20 times. (QueryString.php, Subs.php)
 ! Base: Filters can now be enabled/disabled. (Subs-PrettyUrls.template.php)
 - Base: Don't install the package server anymore. (install.php, PackageGet.php)
 + Base: Started working on a better interface for administration. (index.php, PrettyUrls.php, chrome.css etc)